<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/pad"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_app_name"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/primary"
            android:layout_marginTop="@dimen/pad_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_choose_role"
            android:text="@string/choose_role"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/pad_small"
            android:textColor="@color/secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_height="@dimen/pad_small"
            android:layout_width="match_parent" />

        <Button
            android:id="@+id/btn_doctor"
            android:layout_width="320dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/pad"
            android:layout_marginTop="@dimen/pad_small"
            android:backgroundTint="@color/white"
            android:elevation="6dp"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/login_as_doctor"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/btn_receptionist"
            android:layout_width="320dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/pad"
            android:layout_marginTop="@dimen/pad"
            android:backgroundTint="@color/white"
            android:elevation="6dp"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/login_as_receptionist"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/btn_patient"
            android:layout_width="320dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/pad"
            android:layout_marginTop="@dimen/pad"
            android:backgroundTint="@color/white"
            android:elevation="6dp"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/login_as_patient"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="16sp"
            app:cornerRadius="12dp" />

        <Space android:layout_height="80dp" android:layout_width="match_parent"/>

    </LinearLayout>
</ScrollView>
